--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,9 @@
   </description>
 
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
     <version.jmh>1.35</version.jmh>
   </properties>
 
@@ -49,7 +50,6 @@
 
   <modules>
     <module>drools-benchmarks</module>
-    <module>optaplanner-benchmarks</module>
   </modules>
 
   <repositories>
